--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,32 +1,30 @@
 @import './root.css';
 
-
 .link {
-  text-decoration: none;
+    text-decoration: none;
 }
 /* ---------------------------------------------- */
 .nav-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 25px;
 }
 .logo-header {
-  color: var(--main-color);
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 18px;
-  letter-spacing: -0.64px;
+    color: var(--main-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: -0.64px;
 }
 .logo-color {
-  color: var(--primary-text-CH-color);
+    color: var(--primary-text-CH-color);
 }
 .header-btn-box {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-
+    display: flex;
+    align-items: center;
+    gap: 14px;
 }
 .header {
     padding-top: 24px;
@@ -338,41 +336,41 @@
 }
 /* ---TOGGLE SWITCH--- */
 .switcher-input[type='checkbox'] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-  display: none;
+    height: 0;
+    width: 0;
+    visibility: hidden;
+    display: none;
 }
 .input-label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 46px;
-  height: 20px;
-  background: #cecdcd;
-  display: block;
-  border-radius: 18px;
-  position: relative;
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 46px;
+    height: 20px;
+    background: #cecdcd;
+    display: block;
+    border-radius: 18px;
+    position: relative;
 }
 .input-label:after {
-  content: '';
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  width: 18px;
-  height: 18px;
-  background: #f8f8f8;
-  border-radius: 18px;
-  transition: 0.3s;
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    width: 18px;
+    height: 18px;
+    background: #f8f8f8;
+    border-radius: 18px;
+    transition: 0.3s;
 }
 .switcher-input:checked + .input-label {
-  background: #9bb537;
+    background: #9bb537;
 }
 .switcher-input:checked + .input-label:after {
-  left: calc(100% - 1px);
-  transform: translateX(-100%);
+    left: calc(100% - 1px);
+    transform: translateX(-100%);
 }
 .input-label:active:after {
-  width: 26px;
+    width: 26px;
 }
 .dark-mode .header-cart-icon:hover,
 .dark-mode .header-hamburger-icon:hover,
@@ -448,29 +446,28 @@
 }
 /* MOBIL WINDOW */
 .menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
 }
 @media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
+    .menu-toggle {
+        display: none;
+    }
 }
 .menu-toggle:hover,
 .menu-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 .mobile-menu-nav-links.active-link {
     font-size: 500;
@@ -482,190 +479,184 @@
 
 .dark-mode .mobile-menu-nav-links:hover {
     color: var(--primary-brend);
-
 }
 .menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
-
-  /* width: 100vw;
+    /* width: 100vw;
   height: 100vh; */
-  /* padding: 32px; */
-  padding: 0;
-  padding-top: 200px;
+    /* padding: 32px; */
+    padding: 0;
+    padding-top: 200px;
 
-  background-color: var(--bgc-CH-background-mob-menu);
-  z-index: 999;
+    background-color: var(--bgc-CH-background-mob-menu);
+    z-index: 999;
 
-  transform: translateX(-100%);
-  transition: transform 250ms ease-in-out;
+    transform: translateX(-100%);
+    transition: transform 250ms ease-in-out;
 }
 .mobile-menu-nav-links.dark-mode-hover:hover {
     color: var(--primary-brend);
-
 }
 .menu-container.is-open {
-  transform: translateX(0);
+    transform: translateX(0);
 }
 .block {
-  overflow: hidden;
+    overflow: hidden;
 }
 .menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #ffffff;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: #ffffff;
 }
 .mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 .mobile-menu .nav-link {
-  display: block;
-  padding: 0 50px 16px 50px;
+    display: block;
+    padding: 0 50px 16px 50px;
 
+    color: #ffffff;
+    text-decoration: none;
 
-  color: #ffffff;
-  text-decoration: none;
-
-  text-align: center;
+    text-align: center;
 }
 /* --my-css--- */
 .theme-switcher.burger {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-}
-/* ----- МЕДИА ЗАПРОСЫ ----- */
-@media screen and (max-width: 767px) {
-  .nav-list {
-    display: none;
-  }
-  .theme-switcher.main {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .nav-header {
-    padding-top: 30px;
-  }
-  .burger-menu {
-    display: none;
-  }
-  .theme-switcher {
-    height: 20px;
-  }
-  .header-btn-box {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-  }
-  .nav-list {
-    display: flex;
-    align-items: center;
-    gap: 16;
-  }
-  .nav-link {
-    color: var(--primary-text-CH-color);
-    font-size: 12px;
-    font-family: Inter;
-    font-weight: 500;
-  }
-  .nav-link.current {
-    color: var(--main-color);
-  }
-  .logo-header {
-    font-size: 18px;
-    line-height: 20px;
-    letter-spacing: -0.72px;
-  }
-
-.mobile-menu-switcher {
     position: absolute;
     bottom: 20px;
     left: 20px;
 }
-
-.no-scroll {
-    overflow: hidden;
-    height: 100vh;
-}
-
-@media screen and (min-width: 768px) {
-    .block-for-mobile,
-    .mobile-menu {
+/* ----- МЕДИА ЗАПРОСЫ ----- */
+@media screen and (max-width: 767px) {
+    .nav-list {
         display: none;
     }
-
-    .tablet-desktop {
-        display: block;
+    .theme-switcher.main {
+        display: none;
     }
-
-    .tablet-desktop-nav {
-        padding-top: 28px;
+}
+@media screen and (min-width: 768px) {
+    .nav-header {
+        padding-top: 30px;
+    }
+    .burger-menu {
+        display: none;
+    }
+    .theme-switcher {
+        height: 20px;
+    }
+    .header-btn-box {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        gap: 14px;
     }
-
-    .navigations {
-        margin-top: 31px;
+    .nav-list {
+        display: flex;
+        align-items: center;
+        gap: 16;
     }
-
-    .tablet-menu-nav-links {
+    .nav-link {
+        color: var(--primary-text-CH-color);
         font-size: 12px;
+        font-family: Inter;
         font-weight: 500;
-        line-height: normal;
     }
-
-    .tablet-menu-nav-links:not(:last-child) {
-        margin-right: 16px;
+    .nav-link.current {
+        color: var(--main-color);
     }
-
-    .tablet-menu-nav-links:hover {
-        color: var(--primary-brend);
-        transition: all 300ms ease;
-    }
-
-    .tablet-desktop-nav-icons {
-        display: flex;
-        align-items: center;
-        margin-top: 20px;
-    }
-
-    .switcher {
-        margin-left: 16px;
-        margin-right: -22px;
-        flex-shrink: 0;
-    }
-
-    .logo-first-color {
+    .logo-header {
         font-size: 18px;
         line-height: 20px;
         letter-spacing: -0.72px;
     }
 
-    .logo-second-color {
-        font-size: 18px;
-        line-height: 20px;
-        letter-spacing: -0.72px;
+    .mobile-menu-switcher {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
     }
 
-}
-@media screen and (min-width: 1280px) {
+    .no-scroll {
+        overflow: hidden;
+        height: 100vh;
+    }
 
-  .nav-header {
-    padding-top: 42px;
-  }
-  .header-btn-box {
-    gap: 18px;
-  }
-}
+    @media screen and (min-width: 768px) {
+        .block-for-mobile,
+        .mobile-menu {
+            display: none;
+        }
+
+        .tablet-desktop {
+            display: block;
+        }
+
+        .tablet-desktop-nav {
+            padding-top: 28px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .navigations {
+            margin-top: 31px;
+        }
+
+        .tablet-menu-nav-links {
+            font-size: 12px;
+            font-weight: 500;
+            line-height: normal;
+        }
+
+        .tablet-menu-nav-links:not(:last-child) {
+            margin-right: 16px;
+        }
+
+        .tablet-menu-nav-links:hover {
+            color: var(--primary-brend);
+            transition: all 300ms ease;
+        }
+
+        .tablet-desktop-nav-icons {
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .switcher {
+            margin-left: 16px;
+            margin-right: -22px;
+            flex-shrink: 0;
+        }
+
+        .logo-first-color {
+            font-size: 18px;
+            line-height: 20px;
+            letter-spacing: -0.72px;
+        }
+
+        .logo-second-color {
+            font-size: 18px;
+            line-height: 20px;
+            letter-spacing: -0.72px;
+        }
+    }
+    @media screen and (min-width: 1280px) {
+        .nav-header {
+            padding-top: 42px;
+        }
+        .header-btn-box {
+            gap: 18px;
+        }
+    }
 
     .header {
         padding-bottom: 34px;
@@ -682,28 +673,26 @@
     .tablet-desktop-nav-icons {
         margin-top: 32px;
     }
-} 
-
-:root[data-theme="light"] {
-  color-scheme: light;
-  --text: black;
-  --background: white;
-}
-:root[data-theme="dark"]  {
-  
-  color-scheme: dark;
-  --text: white;
-  --background: black;
-}
-:root[data-theme="dark"] .treats {
-color: var(--dark-title-color);
 }
 
-:root[data-theme="dark"] .header-cart {
-fill: var(--dark-title-color);
+:root[data-theme='light'] {
+    color-scheme: light;
+    --text: black;
+    --background: white;
+}
+:root[data-theme='dark'] {
+    color-scheme: dark;
+    --text: white;
+    --background: black;
+}
+:root[data-theme='dark'] .treats {
+    color: var(--dark-title-color);
+}
+
+:root[data-theme='dark'] .header-cart {
+    fill: var(--dark-title-color);
 }
 body {
-  color: var(--text);
-  background: var(--background);
+    color: var(--text);
+    background: var(--background);
 }
-
