--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,6 @@
 
 /* Placing of main */
 .main-div {
-    
     display: flex;
     flex-direction: column;
 }
@@ -96,7 +95,11 @@
     bottom: 0;
     right: 0;
     z-index: 5000;
-    background: linear-gradient(to right, rgba(9, 5, 47, .85) 0%, rgba(49, 29, 94, .85) 100%);
+    background: linear-gradient(
+        to right,
+        rgba(9, 5, 47, 0.85) 0%,
+        rgba(49, 29, 94, 0.85) 100%
+    );
 }
 
 /* Фільтри */
@@ -105,7 +108,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 14px;
-    
 }
 
 .filter-area {
@@ -141,8 +143,7 @@
     line-height: 1.17;
 }
 
-.reset-filters{
-   
+.reset-filters {
     border: none;
     margin: 0;
     padding: 0;
@@ -159,7 +160,7 @@
     justify-content: center;
     margin-bottom: 14px;
 }
-.reset-filters::before{
+.reset-filters::before {
     content: '';
     width: 10px;
     height: 10px;
@@ -185,8 +186,9 @@
     border-radius: 50%;
     margin-right: 8px;
     font-family: inter;
-    border-color: #0505054D;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color: #0505054d;
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -198,9 +200,9 @@
 }
 
 .main-pag-btn.main-pag-btn-green {
-    border: 1px solid #9BB537;
+    border: 1px solid #9bb537;
     border-radius: 50%;
-    background-color: #9BB537;
+    background-color: #9bb537;
 }
 
 .main-pag-btn:hover:not([disabled]) {
@@ -211,10 +213,11 @@
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
-        color .25s cubic-bezier(.4, 0, .2, 1),
-        background-color .25s cubic-bezier(.4, 0, .2, 1),
-        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
+    transition:
+        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-pag-btn.active:hover {
@@ -224,23 +227,25 @@
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
-        color .25s cubic-bezier(.4, 0, .2, 1),
-        background-color .25s cubic-bezier(.4, 0, .2, 1),
-        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
+    transition:
+        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-pag-btn.active {
     border-radius: 50%;
-    background-color: #9BB537;
+    background-color: #9bb537;
     color: rgb(253, 253, 253);
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
-        color .25s cubic-bezier(.4, 0, .2, 1),
-        background-color .25s cubic-bezier(.4, 0, .2, 1),
-        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
+    transition:
+        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .add-fav-btn {
@@ -257,7 +262,7 @@
     position: absolute;
     top: 214px;
     left: 16px;
-    color: #F8F8F8;
+    color: #f8f8f8;
     font-size: 14px;
     font-weight: 600;
     line-height: 1.29;
@@ -267,7 +272,7 @@
     position: absolute;
     top: 240px;
     left: 16px;
-    color: #F8F8F8;
+    color: #f8f8f8;
     width: 303px;
     height: 32px;
     overflow: hidden;
@@ -281,7 +286,6 @@
     right: 16px;
     top: 288px;
     width: 89px;
-
 }
 
 /* MIN 375**************************************************************** */
@@ -302,7 +306,6 @@
 
 /* MIN 768******************************************************* */
 @media screen and (min-width: 768px) {
-
     /* Категорії */
     #content {
         width: 496px;
@@ -315,7 +318,7 @@
         gap: 32px;
         flex-direction: row;
     }
-    .cards{
+    .cards {
         width: 496px;
         margin-bottom: 64px;
     }
@@ -363,27 +366,24 @@
     .filters {
         gap: 16px;
     }
-    
+
     .label {
         font-size: 14px;
         line-height: 1.29;
     }
-    
+
     .cards {
         margin-bottom: 64px;
     }
 }
 
-
-
 /* Пагінація******************************************************** */
 
 /* MIN 1280******************************************************/
 @media screen and (min-width: 1280px) {
-
     /* Категорії */
-   
-    #content { 
+
+    #content {
         width: 782px;
     }
     .filters {
@@ -393,7 +393,6 @@
     }
     .main-div {
         gap: 64px;
-    
     }
     .cards {
         width: 782px;
@@ -412,5 +411,4 @@
         row-gap: 32px;
         width: 782px;
     }
-  
 }
