--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -47,6 +47,12 @@
     gap: 10px;
     margin-bottom: 48px;
 }
+.hero-btn:hover,
+.hero-btn:focus {
+    background: #9bb537;
+    color: var(--primary-bg-color);
+}
+
 .hero-text {
     width: 335px;
     margin-bottom: 28px;
