--- a/src/styles/popular.css
+++ b/src/styles/popular.css
@@ -27,7 +27,20 @@ button {
     text-decoration: none;
     cursor: pointer;
 }
-
+.points-desc{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.points-title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
 /* ----MAIN STYLES POPULAR RECEPIES */
 .populars {
     width: 335px;
@@ -86,11 +99,11 @@ button {
     margin-bottom: 8px;
 }
 .popular-recepie-descr {
-    height: 36px;
-    overflow: hidden;
+    /* height: 36px;
+    overflow: hidden; */
     color: var(--primary-text-color);
-    text-overflow: ellipsis;
-    white-space: normal;
+    /* text-overflow: ellipsis;
+    white-space: normal; */
     font-family: Inter;
     font-size: 12px;
     font-style: normal;
@@ -128,16 +141,19 @@ button {
         width: 120px;
     }
     .popular-recepie-descr {
-        height: 41px;
-        overflow: hidden;
         color: var(--primary-text-color);
-        text-overflow: ellipsis;
-        white-space: normal;
         font-family: Inter;
         font-size: 10px;
         font-style: normal;
         font-weight: 400;
-        line-height: 1.4; /* 140% */
+        line-height: 1.4; 
+    }
+    .points-desc{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 }
 
@@ -214,7 +230,13 @@ body.no-scroll {
     border: none;
     cursor: pointer;
 }
-.modal-content {
+
+.oder-modal-title{
+    display: flex;
+    flex-direction: column;
+}
+.recipe-video-content{
+    order: 2;
 }
 .modal-recepi-title {
     color: var(--primary-title-color);
@@ -308,9 +330,13 @@ body.no-scroll {
 .recepi-ingredients-item {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid var(--rating-stars-unactive-modal);
+    padding-bottom: 8px;
 }
+
 .recepi-ingredients-item:not(:last-child) {
-    margin-bottom: 22px;
+    margin-bottom: 10px;
+   
 }
 .ingredient-name {
     color: var(--primary-title-color);
@@ -382,10 +408,43 @@ body.no-scroll {
 @media screen and (min-width: 768px) {
     .modal-body {
         width: 531px;
+        padding: 32px 32px;
     }
     .modal-recepi-title {
         margin-bottom: 16px;
     }
+    .recepi-video-wrap {
+        width: 467px;
+        height: 250px;
+        border-radius: 8px;
+        overflow: hidden;
+        margin-bottom: 16px;
+    }
+    .modal-recepi-description{
+        margin-bottom: 32px;
+        margin-top: 32px;
+    }
+    .order{
+        display: flex;
+       flex-wrap: wrap;
+       align-items: center;
+      
+    }
+    .recepi-rating-wrap{
+        order: 2;
+    }
+    .recepi-ingredients-list{
+        order: 3;
+    }
+    .recepi-tags-list{
+        order: 1;
+    }
+    .recepi-ingredients-list{
+        width: 467px;
+    }
+   .modal-recepi-description{
+    margin-top: 0;
+   }
 }
 /* ------------DESCTOP w1280---------------- */
 @media screen and (min-width: 1280px) {
