--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -81,6 +81,7 @@ li {
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: none;
 }
 
 .category-btn {
@@ -182,7 +183,7 @@ li {
     font-size: 18px;
     line-height: 20px;
     letter-spacing: -4%;
-   }
+}
 
 /* ================320px============== */
 
