--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,7 +75,7 @@
     margin: 0 auto !important;
 }
 
-.item-cards{
+.item-cards {
     margin-bottom: 18px;
     position: relative;
 }
@@ -248,7 +248,7 @@
         box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.add-fav-btn{
+.add-fav-btn {
     position: absolute;
     z-index: 1000;
     /* background-color: red; */
@@ -258,14 +258,14 @@
     top: 16px;
     right: 16px;
     background-color: transparent;
-        border: none;
-        padding: 0;
-        z-index: 2;
+    border: none;
+    padding: 0;
+    z-index: 2;
 }
 .heard-icon {
-width: 22px;
-height: 22px;
-z-index: 2;
+    width: 22px;
+    height: 22px;
+    z-index: 2;
 }
 
 .span-title {
@@ -296,20 +296,20 @@ z-index: 2;
 
 .main-see-recipe {
     position: absolute;
-    
+
     left: 132px;
     /* top: 288px;
     width: 89px; */
-    background-color: #9BB537;
+    background-color: #9bb537;
     border: none;
     border-radius: 8px;
     height: 30px;
     width: 93px;
 
     position: absolute;
-        z-index: 1000;
-        bottom: 16px;
-        right: 16px;
+    z-index: 1000;
+    bottom: 16px;
+    right: 16px;
 
     font-weight: 500;
     font-size: 12px;
@@ -321,7 +321,7 @@ z-index: 2;
 }
 
 .shadow-on-img::before {
-    content: "";
+    content: '';
     position: absolute;
     inset: -9px;
     transform: translate(10px, 8px);
@@ -334,18 +334,17 @@ z-index: 2;
     border-radius: 8px;
 }
 .item-cards .card-img {
-width: 250px;
+    width: 250px;
     height: 287px;
     border-radius: 8px;
 }
 
-
 .reset-filters {
-   font-weight: 500;
-   font-size: 12px;
-   line-height: 16px; 
-   color: rgba(5, 5, 5, 0.5);
-margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    color: rgba(5, 5, 5, 0.5);
+    margin-bottom: 20px;
 }
 
 /* MIN 375**************************************************************** */
@@ -362,10 +361,9 @@ margin-bottom: 20px;
         margin: 0 auto !important;
         width: 335px;
     }
-    .main-see-recipe  {
+    .main-see-recipe {
         left: 132px;
     }
-
 }
 
 /* MIN 768******************************************************* */
@@ -452,10 +450,10 @@ margin-bottom: 20px;
 
 .reset-filters {
     display: flex;
-        justify-content: flex-end;
-        margin-right: 145px;
-        position: inherit;
-        margin-bottom: 14px;
+    justify-content: flex-end;
+    margin-right: 145px;
+    position: inherit;
+    margin-bottom: 14px;
 }
 /* Пагінація******************************************************** */
 
@@ -496,7 +494,7 @@ margin-bottom: 20px;
         right: 16px;
     }
 
-        .reset-filters {
-            margin-right: 30px;
-        }
+    .reset-filters {
+        margin-right: 30px;
+    }
 }
