--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Inter', sans-serif;
     background: var(--primary-bg-color);
     transition: 250ms;
@@ -17,7 +17,7 @@ ul {
 }
 li {
     list-style: none;
-}
+} */
 
 .favorites-zero {
     display: none;
@@ -30,7 +30,7 @@ li {
     padding: 256px 20px 0;
 }
 
-.container {
+.fav-container {
     width: 335px;
     background: var(--primary-bg-color);
     transition: 250ms;
@@ -61,6 +61,7 @@ li {
 .tags-container {
     display: flex;
     gap: 18px;
+    padding-bottom: 24px;
 }
 
 .favorites-tags {
@@ -76,8 +77,7 @@ li {
     justify-content: center;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -96,8 +96,7 @@ li {
     cursor: pointer;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -136,8 +135,7 @@ li {
     height: 40px;
     border-radius: 50%;
     border-color: rgba(5, 5, 5, 0.3);
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -182,12 +180,19 @@ li {
     font-size: 18px;
     line-height: 20px;
     letter-spacing: -4%;
-   }
-
+}
+.favorites-gallery-container {
+    margin-bottom: 40px;
+}
+.favorites-list {
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+}
 /* ================320px============== */
 
 @media screen and (min-width: 320px) {
-    .container {
+    .fav-container {
         width: 320px;
     }
     .page-change-favourite-list {
@@ -202,7 +207,7 @@ li {
 /* ================428px============== */
 
 @media screen and (min-width: 428px) {
-    .container {
+    .fav-container {
         width: 428px;
     }
 }
@@ -210,7 +215,7 @@ li {
 /* ================450px============== */
 
 @media screen and (min-width: 450px) {
-    .container {
+    .fav-container {
         width: 450px;
     }
     .page-change-favourite-list {
@@ -221,7 +226,7 @@ li {
 /* ================768px============== */
 
 @media screen and (min-width: 768px) {
-    .container {
+    .fav-container {
         width: 768px;
         margin-left: 32px;
         margin-right: 32px;
@@ -234,7 +239,7 @@ li {
 
 /* ================1158px============== */
 @media screen and (min-width: 1158px) {
-    .container {
+    .fav-container {
         width: 1158px;
         margin-left: 100px;
         margin-right: 100px;
