--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -32,7 +32,7 @@ body {
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: var(--primary-title-color);
     background-color: var(--primary-bg-color);
 }
