--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -77,7 +77,8 @@ li {
     justify-content: center;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -97,7 +98,8 @@ li {
     cursor: pointer;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -136,7 +138,8 @@ li {
     height: 40px;
     border-radius: 50%;
     border-color: rgba(5, 5, 5, 0.3);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
