--- a/src/styles/modal-recipe.css
+++ b/src/styles/modal-recipe.css
@@ -4,17 +4,16 @@
 .tags-1 {
     display: none;
 }
-.tag-item {
-}
 .modal-recipe {
     max-height: 100%;
+    width: 320px;
     background-color: var(--dark-title-color);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     /* transition: 300ms linear; */
-    padding: 30px 5px;
+    padding: 30px 10px;
     overflow-y: auto;
     border-radius: 15px;
 }
@@ -28,14 +27,37 @@
     right: 7px;
     padding: 0;
 }
+.block1-wrap {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    margin-bottom: 14px;
+}
 .recipe-video-wrap {
+    position: relative;
     display: flex;
     justify-content: center;
 }
+
+.video-overlay {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.icon-youtube {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    z-index: 1;
+}
+
 .recipe-image {
-    width: 250px;
-    height: 250px;
-    margin: 0;
+    width: 295px;
+    height: 295px;
+    border-radius: 8px;
 }
 .selected-recipe-name {
     font-family: 'Inter', sans-serif;
@@ -45,12 +67,9 @@
     line-height: 1.33;
     letter-spacing: 0;
     color: var(--primary-title-color);
-    /* margin-top: 315px; */
-    margin-bottom: 10px;
 }
 
 .rating-wrap-recipe {
-    margin-bottom: 20px;
     display: flex;
     align-items: center;
     gap: 6px;
@@ -86,7 +105,9 @@
     color: var(--primary-input-title-color);
 }
 
-.ingredients {
+.ingredients-wrap {
+    margin: 33px 0 40px 0;
+    width: 295px;
 }
 .ingredient-item {
     position: relative;
@@ -113,7 +134,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin: 0 0 24px 0;
     flex-wrap: wrap;
 }
 .btn-tag {
@@ -131,10 +151,10 @@
     box-shadow: inset 0 0 0 1px var(--primary-input-border);
 }
 .instruction-wrap {
-    width: 320px;
+    width: 310px;
     max-height: 288px;
     resize: none;
-    margin-top: 24px;
+    margin: 24px 0 40px 0;
     overflow-y: auto;
 }
 .recipe-instruction {
@@ -142,7 +162,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.28;
+    /* line-height: 1.28; */
     letter-spacing: 0;
     color: var(--primary-title-color);
     white-space: normal;
@@ -151,7 +171,6 @@
 .button-wrap {
     display: flex;
     gap: 10px;
-    margin-top: 40px;
 }
 .btn-favorite {
     font-family: 'Inter', sans-serif;
@@ -205,38 +224,21 @@ ul.ingredients li:last-child {
 @media screen and (min-width: 375px) {
     .modal-recipe {
         padding: 40px 20px;
+        width: 335px;
     }
     .recipe-image {
         height: 295px;
         width: 295px;
     }
     .modal-close-btn-recipe {
-        top: 17px;
-        right: 17px;
-    }
-    .selected-recipe-name {
-        margin-top: 20px;
-        margin-bottom: 14px;
-    }
-    .rating-wrap-recipe {
-        margin-bottom: 33px;
-    }
-    .button-wrap {
-        gap: 14px;
-    }
-    .instruction-wrap {
-    }
-    .recipe-instruction {
-        margin-bottom: 40px;
-    }
-    .recipe-video-wrap {
-        width: 295px;
-        height: 295px;
+        top: 12px;
+        right: 12px;
     }
 }
 @media screen and (min-width: 768px) {
     .modal-recipe {
         padding: 32px;
+        width: 531px;
     }
     .modal-close-btn-recipe {
         top: 16px;
@@ -244,33 +246,19 @@ ul.ingredients li:last-child {
     }
     .block1-wrap {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
+        gap: 16px;
+        margin-bottom: 16px;
     }
-    .modal-wrap-recipe {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .selected-recipe-name {
-        margin: 0 0 16px 0;
+    .recipe-image {
+        width: 467px;
+        height: 250px;
     }
     .tags-1 {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        margin: 0 0 24px 0;
         flex-wrap: wrap;
-
-        /* justify-content: left;
-gap: 4px;
-margin-bottom: 32px; */
-    }
-    .instruction-wrap {
-        width: 467px;
-        max-height: 162px;
-        resize: none;
-        margin-top: 24px;
-        overflow-y: auto;
     }
     .tags-2 {
         display: none;
@@ -278,29 +266,26 @@ margin-bottom: 32px; */
     .block2-wrap {
         display: flex;
         flex-direction: row;
-        gap: 32px;
-        align-items: start;
+        flex-wrap: wrap;
+        gap: 5px;
+        /* align-items: start; */
+        /* justify-content: space-between; */
     }
     .rating-wrap-recipe {
         gap: 8px;
-        align-items: center;
+        /* align-items: center; */
     }
-    .recipe-video-wrap {
-        margin-bottom: 16px;
+    .ingredients-wrap {
+        margin: 32px 0;
         width: 467px;
-        height: 250px;
-    }
-
-    .ingredients {
-        margin-bottom: 40px;
     }
     ul.ingredients li {
         margin-bottom: 16px;
     }
 
     .recipe-instruction {
-        height: 162px;
-        margin-bottom: 32px;
+        /* height: 162px; */
+        /* margin-bottom: 32px; */
     }
     .button-wrap {
         display: flex;
@@ -308,6 +293,22 @@ margin-bottom: 32px; */
     }
     .recipe-image {
         height: 250px;
+    }
+    .instruction-wrap {
+        width: 467px;
+        max-height: 162px;
+        resize: none;
+        /* margin-top: 24px; */
+        overflow-y: auto;
+        margin-bottom: 32px;
+    }
+    .btn-favorite {
+        width: 156px;
+        height: 45px;
+    }
+    .btn-rating-recipe {
+        width: 141px;
+        height: 45px;
     }
 }
 
