--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -34,7 +34,7 @@ body {
     text-rendering: optimizeSpeed;
     font-family: 'Inter', sans-serif;
     color: var(--primary-title-color);
-    background-color: var(--primary-bg-color);
+    background-color: var(--primary-bg);
 }
 
 ul[class],
