--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -49,7 +49,7 @@
 }
 .hero-btn:hover,
 .hero-btn:focus {
-    background: #9bb537;
+    background: var(--primary-brend);
     color: var(--primary-bg-color);
 }
 
@@ -67,7 +67,7 @@
 }
 .image {
     height: 280px;
-    background-color: var(--primary-title-color);
+    background-color: #050505;
 }
 .image:not(:last-child) {
     border-radius: 10px;
