--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,6 +1,7 @@
 :root[data-theme='light'] {
     --primary-brend: #9bb537;
     --primary-bg-color: #f8f8f8;
+    --primary-bg: #f8f8f8;
     --primary-cards-overlay: linear-gradient(
         1deg,
         rgba(5, 5, 5, 0.6) 0%,
@@ -44,6 +45,7 @@
 :root[data-theme='dark'] {
     --primary-brend: #9bb537;
     --primary-bg-color: #f8f8f8;
+    --primary-bg: #161616;
     --primary-cards-overlay: linear-gradient(
         1deg,
         rgba(5, 5, 5, 0.6) 0%,
