--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -211,6 +211,9 @@
 .header-slider.round:before {
     border-radius: 50%;
 }
+.no-animation {
+    transition: none !important;
+}
 @media screen and (min-width: 768px) {
     .header {
         padding-top: 30px;
